--- a/public/index.html
+++ b/public/index.html
@@ -510,9 +510,9 @@
 
           <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/vaibhavi.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/backend developer.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Vaibhavi Bhosale</h4>
+                <h4>Jessy Robert</h4>
                 <span>Front-End Developer</span>
                 <p>Plays around with with divs and spans yet doesn't know how to solve the simple integration.</p>
                 <div class="social">
@@ -527,9 +527,9 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/devanshu.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/frontend.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Devanshu Joshi</h4>
+                <h4>John Roy</h4>
                 <span>Front-End Developer</span>
                 <p>Frontend developer with a knack for creating responsive and user-friendly interfaces.</p>
                 <div class="social">
